--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -7,8 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://minime031296.github.io/React-Todo-App",
   "dependencies": {
     "axios": "^1.6.8",
     "json-server": "^1.0.0-alpha.23",
